# Mooncord-Modmail

./: .gitignore  README.md  bot.py  main.py  pyproject.toml  requirements.txt
api/: api_connector.py
application_commands/: __init__.py  context_modmail.py  slash_config.py  slash_help.py  slash_modmail.py
bot/: README.md  log_utils.py  logging.conf  sayo.py
bot/commands/: __init__.py  close_command.py  command.py  config_command.py  context.py  help_command.py  shutdown_command.py
bot/modules/: api_connector.py  modmail.py
bot/slash/: slash_commands.py
bot/utils/: __init__.py  date_utils.py  parse_args.py
commands/: __init__.py  close_ticket.py  context_modmail.py  create_ticket.py  help_command.py  lock_command.py  setup_button.py  setup_button_backup.py  slash_modmail.py  sync_commands.py
config_example/: config.yaml
database/: database.py
db/: __init__.py  db.py  modmail_db.py
modmail/: __init__.py  api_endpoints.py  modmail.py
modules/: __init__.py  command.py  context.py
modules/modmail/: modmail.py  modmail_constants.py
modules/modmail/commands/: __init__.py  close_ticket.py  help_command.py  lock_command.py  setup_button.py  unlock_command.py
modules/modmail/components/: __init__.py  setup_button.py  setup_modal.py
modules/modmail/modmail_modules/: channels.py  forums.py
scripts/: setup_slash_commands.py  venvsetup.sh
utils/: parse_args.py
